objects/B25__Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Accessory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accessory</label>
        <referenceTo>Accessory__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Add_To_Fleet_Date__c</fullName>
        <formula>OUV_Vehicle__r.OUV_AddToFleetDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Add To Fleet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_License_Plate_Number__c</fullName>
        <label>Actual License Plate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Double_Booking_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Double Booking Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Double_Booking__c</fullName>
        <formula>IF(B25__Reservation_Type__r.Name == &apos;Repair&apos; ||  B25__Status__r.Name == &apos;Cancelled&apos; ||  B25__Status__r.Name == &apos;Rejected&apos; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Double Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Driver_1__c</fullName>
        <formula>OUV_Booking__r.Driver_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Driver 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_End_Date__c</fullName>
        <formula>OUV_Booking__r.OUV_BookingEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End date of booking</inlineHelpText>
        <label>Booking End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_End_Time__c</fullName>
        <formula>OUV_Booking__r.OUV_Booking_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Internal__c</fullName>
        <formula>OUV_Booking__r.OUV_DriverUser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Internal JLR Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Justification_Passout__c</fullName>
        <label>Booking Justification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event/Sales activity</fullName>
                </value>
                <value>
                    <fullName>External Loan (VLA)</fullName>
                </value>
                <value>
                    <fullName>Pool Car</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Eng. Roadtest (inc. Durability/Calibration)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Justification_Workshop__c</fullName>
        <label>Booking Justification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Engineering Test/Investigation</fullName>
                </value>
                <value>
                    <fullName>Press Prep.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Request_Type__c</fullName>
        <label>Booking Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Vehicle Booking</fullName>
                </value>
                <value>
                    <fullName>Multiple Vehicle booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Short_Description__c</fullName>
        <inlineHelpText>High Level Description of Vehicle Activity - Do not add any personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Booking Quick Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Start_Date__c</fullName>
        <formula>OUV_Booking__r.OUV_BookingStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start date of booking</inlineHelpText>
        <label>Booking Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Start_Time__c</fullName>
        <formula>OUV_Booking__r.OUV_Booking_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <formula>TEXT(OUV_Booking__r.OUV_BookingApprovalStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passout</fullName>
                </value>
                <value>
                    <fullName>Repair Booking</fullName>
                </value>
                <value>
                    <fullName>Workshop Booking</fullName>
                </value>
                <value>
                    <fullName>Auction Booking</fullName>
                </value>
                <value>
                    <fullName>Other Remarketing event Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>OUV_Vehicle__r.OUV_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Entry_Date__c</fullName>
        <label>Keys Returned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Car_Exit_Date__c</fullName>
        <label>Keys Issued Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derivative_Pack_Description__c</fullName>
        <formula>OUV_Vehicle__r.OUV_Derivative_Pack_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derivative Pack Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations (Account)</relationshipLabel>
        <relationshipName>Reservations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Driver_1__c</fullName>
        <inlineHelpText>Add driver detail here, cdsid for JLR Employee, or logistics company moving the vehicle - Do not add any external user personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Driver 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_2__c</fullName>
        <inlineHelpText>Add driver detail here, cdsid for JLR Employee, or logistics company moving the vehicle - Do not add any external user personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Driver 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator__c</fullName>
        <formula>OUV_Vehicle__r.OUV_FleetAdministrator__r.FirstName + &apos;&apos; + OUV_Vehicle__r.OUV_FleetAdministrator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Administrator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <formula>OUV_Vehicle__r.Fleet_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_VIN__c</fullName>
        <formula>OUV_Vehicle__r.OUV_FullVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Includes_Preparation_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this Reservation include Preparation/Transportation?</description>
        <label>Includes Preparation/Transportation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_JLR_Contact__c</fullName>
        <inlineHelpText>The JLR CDSID of the person requesting, using or who is responsible for the vehicle whilst on loan.</inlineHelpText>
        <label>Internal JLR Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Scheduled_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scheduled End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Scheduled_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scheduled Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vehicle_Write_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vehicle Write Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey_Type__c</fullName>
        <label>Journey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One way</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keys_Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keys Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keys_Checked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keys Checked Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Temporary licence/trade plate to be used for unregistered vehicles</inlineHelpText>
        <label>Licence/Trade Plate</label>
        <referenceTo>License_Plate__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Agreement_Language__c</fullName>
        <description>Language in which to generate the VLA</description>
        <label>Loan Agreement Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>nl</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>en</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>pt</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Agreement_Market__c</fullName>
        <label>Loan Agreement Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Category__c</fullName>
        <label>Loan Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The actual market using the vehicle</description>
        <formula>TEXT(OUV_Vehicle__r.OUV_market_location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The actual market using the vehicle</inlineHelpText>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_At_Close_Of_Booking__c</fullName>
        <label>Mileage At Close Of Booking</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <formula>OUV_Vehicle__r.OUV_ModelDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year_Description__c</fullName>
        <formula>OUV_Vehicle__r.OUV_ModelYearDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Keys_Checked_In__c</fullName>
        <label>No. Of Keys Checked In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Keys_Checked_Out__c</fullName>
        <label>No. Of Keys Checked Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select from existing locations, or create a new account / location for frequently used locations</inlineHelpText>
        <label>Return Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vehicle Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations (Booking Location)</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Associated_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Booking</label>
        <referenceTo>OUV_Booking__c</referenceTo>
        <relationshipLabel>Reservations (Associated Booking)</relationshipLabel>
        <relationshipName>AssociatedBooking_Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_B25_Status__c</fullName>
        <formula>B25__Status__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B25 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Justification__c</fullName>
        <formula>TEXT( OUV_Booking__r.OUV_BookingJustification__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Booking Justification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Number__c</fullName>
        <formula>OUV_Booking__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Booking Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Type__c</fullName>
        <formula>TEXT( OUV_Booking__r.OUV_BookingType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Booking Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OUV Booking</label>
        <referenceTo>OUV_Booking__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Document_Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Document_Template</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Driver_1__c</fullName>
        <label>Encrypted Driver 1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_VLA_Company__c</fullName>
        <label>Encrypted VLA Company</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_VLA_Full_Name__c</fullName>
        <label>Encrypted VLA Full Name</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OUV Fleet</label>
        <referenceTo>OUV_Fleet__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Full_VIN__c</fullName>
        <label>Full VIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Internal_JLR_Contact_Email__c</fullName>
        <description>Internal JLR Contact Email</description>
        <label>Internal JLR Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Passout_Type__c</fullName>
        <formula>TEXT( OUV_Booking__r.OUV_PassoutType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Passout Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Registration_Plate__c</fullName>
        <label>Registration Plate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_TrimDescription__c</fullName>
        <formula>OUV_Vehicle__r.OUV_TrimDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Checked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Matches the &quot;Is Checked-Out&quot; checkbox from Vehicle. This field is used for Check Out / Check In custom button.</description>
        <label>Vehicle Checked-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Loan_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OUV Vehicle Loan Agreement</label>
        <referenceTo>OUV_Vehicle_Loan_Agreement__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OUV Vehicle</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>OUV_Vehicle__c.OUV_VehicleMasterStatus__c</field>
                <operation>equals</operation>
                <value>Live</value>
            </filterItems>
            <filterItems>
                <field>OUV_Vehicle__c.OUV_VehicleMasterStatus__c</field>
                <operation>equals</operation>
                <value>Handed In</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Location__c</fullName>
        <inlineHelpText>Only to be used for one-off locations</inlineHelpText>
        <label>Other Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Description__c</fullName>
        <formula>OUV_Vehicle__r.OUV_PaintDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passout_Type__c</fullName>
        <label>Passout Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preparation_Transportation_End__c</fullName>
        <description>End Date for the Preparation/Transportation Reservation</description>
        <label>Preparation/Transportation End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Presold__c</fullName>
        <formula>OUV_Vehicle__r.OUV_Presold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Pre-sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Location__c</fullName>
        <formula>OUV_Vehicle__r.OUV_PrimaryLocation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>JLR storage locations</inlineHelpText>
        <label>Primary Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>OUV_Vehicle__r.OUV_Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Booking__c</fullName>
        <inlineHelpText>A Detail Description of the Use of the Vehicle(s) - Do not add any personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Reason for Booking</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <formula>OUV_Vehicle__r.OUV_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarketing_Coordinator_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reservation_Preparation_Transportation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to the related Preparation/Transportation Reservation</description>
        <label>Reservation Preparation/Transportation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Reservation Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_AV_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/V Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Catering_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catering Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Classic_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classic Visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Closed_Reason_Other__c</fullName>
        <label>Closed Reason Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SO_Reservation_Close_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Commissioning_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Commissioning Request</label>
        <referenceTo>SO_Commissioning_Request__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>SO_Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Details__c</fullName>
        <label>Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservations_Host</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Is_Non_Bespoke__c</fullName>
        <formula>OR(
 ISPICKVAL(SO_VIP_Meeting_Type__c , &apos;Meeting&apos;), 
 ISPICKVAL(SO_VIP_Meeting_Type__c , &apos;Tour&apos;),
 ISPICKVAL(SO_VIP_Meeting_Type__c , &apos;Event&apos;),
 ISPICKVAL(SO_VIP_Meeting_Type__c , &apos;VIP Guest&apos;),
 ISPICKVAL(SO_VIP_Meeting_Type__c , &apos;	Private Office Experience&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Non-Bespoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Is_Video_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Video Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Max_Attendees__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Max. Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Meeting_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <summaryForeignKey>SO_Reservation_Attendee__c.SO_Reservation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SO_PPE_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPE Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Primary_Contact_Email__c</fullName>
        <formula>SO_VIP_Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservations (Primary Contact)</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Room_Setup__c</fullName>
        <label>Room Setup</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservations (Secondary Contact)</relationshipLabel>
        <relationshipName>Reservations_secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Special_Requests__c</fullName>
        <label>Special Requests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                    <default>true</default>
                    <label>Proposed</label>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Teams_Link__c</fullName>
        <label>Team&apos;s Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Tour_Type__c</fullName>
        <label>Tour Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Commission_Tour_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Transport_Requirements__c</fullName>
        <label>Transport Requirements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_VIP_AV_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/V Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_VIP_Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>